# python-cozify

./: .codecov.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .style.yapf  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  cozify-sample-loop.py  cozify-temp.py  cozify.py  main.cfg.dist  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
cozify/: Error.py  __init__.py  cloud.py  cloud_api.py  config.py  conftest.py  http.py  hub.py  hub_api.py  multisensor.py  rest.py  storage.py
cozify/test/: debug.py  fixtures.py  fixtures_devices.py  state_verify.py  test_cloud.py  test_cloud_api.py  test_config.py  test_fixtures.py  test_http.py  test_hub.py  test_hub_api.py  test_hub_device_capabilities.py  test_hub_devices.py  test_hub_scenes.py  test_integration.py
docs/: Makefile  cloud.rst  cloud_api.rst  conf.py  config.rst  exceptions.rst  http.rst  hub.rst  hub_api.rst  index.rst  tests.rst
tests/: authtest.py  configtest.py  hubauthtest.py  hubnametoid.py  hubremoteauth.py  multisensor.py
tests/cloud/: auth.py
tests/hub/: hubidtoname.py  multisensor.py  tz.py
util/: auth.py  capabilities_list.py  cleanSlate.py  cloud_raw.py  device-fade-test.py  device-off.py  device-on.py  device-toggle.py  devicedata.py  devicelist.py  gist-conf.sh  hub_raw.py  hubget.py  lightify-reset.py  remoter.py  temperature_sensors.py  test-devices.py  toggle.py  tokenExplorer.py  tokendecode.py  versionExplorer.py
