[tool.poetry]
name = "cozify"
version = "0.2.34"
description = "Unofficial Python3 API bindings for the (unpublished) Cozify API."
authors = ["Artanicus <artanicus@nocturnal.fi>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Artanicus/python-cozify"
repository = "https://github.com/Artanicus/python-cozify"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
absl-py = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
codecov = "^2.1.12"
pytest-profiling = "^1.7.0"
python-gist = "^0.10.6"
mbtest = "^2.10.0"
pytest-dotenv = "^0.5.2"
pytest-recording = "^0.12.0"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-autoapi = "^1.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = docs

[testenv:docs]
changedir = docs
deps =
  sphinx
  recommonmark
  sphinx_rtd_theme
commands = sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
"""

